--- a/app/assets/stylesheets/orders.css.scss
+++ b/app/assets/stylesheets/orders.css.scss
@@ -37,3 +37,9 @@
   display: none;
   font-size: 14px;
 }
+#world-picker select {
+  margin-bottom: 10px;
+}
+#final-details input {
+  margin-bottom: 10px;
+}
