Tweak order creation form and related .js + .css

--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -59,6 +59,7 @@
     <% end %>
     <button id="previous-button" class="smuggler-button" type="button">Back</button>
     <button id="next-button" class="smuggler-button" type="button">Next</button>
+    <div class="float-clearer"></div>
   </div>
 </div>
 <div class="container-block on-the-right">
