--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, @user.name) %>
-<%= render 'layouts/profile_menu' %>
+<%#= render 'layouts/profile_menu' %>
 <div class="big container-block on-the-right">
-  <h2>Your profile</h2>
+  <h2>Profile page</h2>
+  Profile page is still under construction - <%= link_to 'click here', logout_path, method: 'delete' %> if you want to log out.
 </div>
