--- a/app/views/user_mailer/signup_completed_email.html.erb
+++ b/app/views/user_mailer/signup_completed_email.html.erb
@@ -6,13 +6,11 @@
 <body>
 <h1>Welcome to TibiaSmuggler.com, <%= @user.name %>!</h1>
 <p>
-  You have successfully created an account in our system.
+  You have successfully created an account in our system.<br />
+  As a member of our website you are able to order world trades between 79 Tibia game worlds from now on!
 </p>
 <p>
-  To log in to the site, just follow this link: [link]
-</p>
-<p>
-  Thanks for joining and have a great day!
+  Thanks for joining our community and have a great day!
 </p>
 <p>
   Yours,<br />
