--- a/app/views/user_mailer/signup_completed_email.text.erb
+++ b/app/views/user_mailer/signup_completed_email.text.erb
@@ -1,11 +1,9 @@
-Welcome to TibiaSmuggler.com, <%= @user.name %>
-===============================================
+Welcome to TibiaSmuggler.com, <%= @user.name %>!
 
 You have successfully created an account in our system.
+As a member of our website you are able to order world trades between 79 Tibia game worlds from now on!
 
-To login to the site, just follow this link: [link]
-
-Thanks for joining and have a great day!
+Thanks for joining our community and have a great day!
 
 Yours,
 Tibia Smuggler Team
