--- a/app/views/order_mailer/parcel_confirmed_email.html.erb
+++ b/app/views/order_mailer/parcel_confirmed_email.html.erb
@@ -4,9 +4,9 @@
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
 </head>
 <body>
-<h1>Hello, <%= @order.user.name %>!</h1>
+<b>Hello, <%= @order.user.name %>!</b>
 <p>
-  You have confirmed sending a parcel to Gold Smuggler <%= @order.world_from %>.
+  You have confirmed sending a parcel to Gold Smuggler <%= @order.world_from.name %>.
 </p>
 <p>
   Your parcel will now be verified by our staff.<br />
