--- a/app/views/order_mailer/order_completed_email.html.erb
+++ b/app/views/order_mailer/order_completed_email.html.erb
@@ -4,10 +4,10 @@
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
 </head>
 <body>
-<h1>Hello, <%= @order.user.name %>!</h1>
+<b>Hello, <%= @order.user.name %>!</b>
 <p>
   We are happy to inform you that your world trade order was completed!<br/>
-  Your gold can be found in the inbox of your Tibia character - <b><%= @order.character_to %></b>
+  Your gold can be found in the inbox of your Tibia character - <b><%= @order.character_to %></b>.
 </p>
 <p>
   If you were satisfied with our service, please recommend us to your friends!
