--- a/app/views/order_mailer/order_rejected_email.html.erb
+++ b/app/views/order_mailer/order_rejected_email.html.erb
@@ -4,7 +4,7 @@
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
 </head>
 <body>
-<h1>Hello, <%= @order.user.name %>!</h1>
+<b>Hello, <%= @order.user.name %>!</b>
 <p>
   The status of your order was changed to "rejected".<br />
   <% if @order.rejection_reason %>
