Use <b> instead of <h1> in user mailer views

--- a/app/views/user_mailer/signup_completed_email.html.erb
+++ b/app/views/user_mailer/signup_completed_email.html.erb
@@ -4,10 +4,10 @@
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
 </head>
 <body>
-<h1>Welcome to TibiaSmuggler.com, <%= @user.name %>!</h1>
+<b>Welcome to TibiaSmuggler.com, <%= @user.name %>!</b>
 <p>
   You have successfully created an account in our system.<br />
-  As a member of our website you are able to order world trades between 79 Tibia game worlds from now on!
+  As a member of our website you are able to order world trades between 79 Tibia game worlds!
 </p>
 <p>
   Thanks for joining our community and have a great day!
