--- a/app/views/user_mailer/signup_completed_email.text.erb
+++ b/app/views/user_mailer/signup_completed_email.text.erb
@@ -1,7 +1,7 @@
 Welcome to TibiaSmuggler.com, <%= @user.name %>!
 
 You have successfully created an account in our system.
-As a member of our website you are able to order world trades between 79 Tibia game worlds from now on!
+As a member of our website you are able to order world trades between 79 Tibia game worlds!
 
 Thanks for joining our community and have a great day!
 
