--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,6 +1,7 @@
 <nav>
   <%= link_to 'Home Page', root_path %>
   <%= link_to 'Order WT', '#' %>
+  <%= link_to 'My orders', orders_path if signed_in? && current_user.orders.any? %>
   <%= link_to 'Gold List', gold_list_path %>
   <%= link_to 'Help', help_path %>
   <%= signed_in? ? link_to('Account', current_user) : link_to('Account', login_path) %>
