Slightly modify the profile page for initial release

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,5 +2,9 @@
 <%#= render 'layouts/profile_menu' %>
 <div class="big container-block on-the-right">
   <h2>Profile page</h2>
-  Profile page is still under construction - <%= link_to 'click here', logout_path, method: 'delete' %> if you want to log out.
+  Profile page is still under construction!<br /><br />
+
+  If you want to order a WT, click the "Home Page" link and use our calculator.<br /><br />
+
+  <%= link_to 'Click here', logout_path, method: 'delete' %> if you want to log out.
 </div>
