--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -29,7 +29,7 @@
   <% if @order.order_status_id == 2 %>
     <div>
     Please click the button below once you have sent your parcel to our Tibia character:
-    <%= link_to 'I have sent the parcel', order_path(@order),
+    <%= link_to 'I have sent the parcel', confirm_parcel_path(@order),
                 class: 'smuggler-button as-link', data: { confirm: "Click OK if you are sure you have sent the parcel, or 'cancel' if not." } %>
     </div>
   <% end %>
