Make further changes to admin features, commit to rebase

--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -1,1 +1,4 @@
-<h1>Administration</h1> <ul> <li><%= link_to 'Manage Users' %></li> <li><%= link_to 'Manage Articles' %></li> </ul>
+<h1>Administration</h1>
+<ul>
+  <li><%= link_to 'Manage Orders', admin_orders_path %></li>
+</ul>
