Fix first collection of bugs in test release

--- a/app/assets/stylesheets/worlds.css.scss
+++ b/app/assets/stylesheets/worlds.css.scss
@@ -39,9 +39,9 @@
     color: darkred;
   }
   .orange {
-    color: darkorange;
+    color: royalblue;
   }
   .gray {
-    color: #999999;
+    color: #666;
   }
 }
