--- a/app/views/order_mailer/order_completed_email.txt.erb
+++ b/app/views/order_mailer/order_completed_email.txt.erb
@@ -6,4 +6,4 @@ Your gold can be found in the inbox of your Tibia character - <%= @order.charact
 If you were satisfied with our service, please recommend us to your friends!
 
 Yours,
-Tibia ML Smuggler Team
+Tibia Smuggler Team
