--- a/app/views/order_mailer/parcel_confirmed_email.txt.erb
+++ b/app/views/order_mailer/parcel_confirmed_email.txt.erb
@@ -9,4 +9,4 @@ Should there be any problem with your parcel (for example the amount of gold is 
 Verifying the parcel can take up to 24 hours (but will usually be done much faster).
 
 Yours,
-Tibia ML Smuggler Team
+Tibia Smuggler Team
