--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -41,7 +41,7 @@
   <% end %>
   <% if @order.order_status_id > 2 %>
     <div>
-      No actions available.
+      No more actions available.
     </div>
   <% end %>
 </div>
