--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,69 @@
 <% provide(:title, 'Help') %>
-<h1>Help page</h1>
+<div id="help-page">
+  <h2>Contact</h2>
+  <div>
+    In most cases, you will not need to contact us at all. Please read the Frequently Asked Questions section below.<br />
+    If the FAQ section does not answer the questions you might have, you can contact us via Skype:<br /><br />
+    <%= image_tag 'skype.png', alt: 'Smuggler Skype nickname' %><br /><br />
+    Or by sending an email to:<br /><br />
+    <%= image_tag 'bot_address.png', alt: 'Smuggler contact address' %><br /><br />
+  </div>
+  <h2>Frequently Asked Questions</h2>
+  <div class="faq-question">
+    1. I have sent a parcel and my order is not completed. Is there anything I should do?
+  </div>
+  <div class="faq-answer">
+    Once you send a parcel, you have to let us know that you did it! Don't worry, though, letting us know is very easy.
+    All you have to do is to click the "My orders" link which is displayed in the navigation bar of our page
+    or the link which we have sent to you in an email notification. Then, just press the button confirming your order.
+  </div>
+  <div class="faq-question">
+    2. When will my order be completed?
+  </div>
+  <div class="faq-answer">
+    We usually complete all orders within 24 hours counting from the moment you confirm sending the parcel to us
+    (and in most cases, we do that much faster!). Keep
+    in mind that once you send a parcel, you need to visit your order page and confirm having sent a parcel!
+    You can do that either by clicking the "My Orders" link which will be displayed in the navigation bar once you
+    have submitted at least one order, or by following a link which we will have sent to you in an email notification
+    once your order is accepted by our staff member, and pressing the 'I have sent parcel' button.<br /><br />
+    If we ever take more than 36 hours to complete your order, please contact us via Skype or email. We will make
+    sure to resolve the problem as fast as possible!
+  </div>
+  <div class="faq-question">
+    3. How do I create a world trade order?
+  </div>
+  <div class="faq-answer">
+    Creating a world trade order is very easy. Simply visit our home page and use the calculator!
+  </div>
+  <div class="faq-question">
+    4. Do I need to create an account to be able to order a world trade?
+  </div>
+  <div class="faq-answer">
+    Yes. Creating an account is very easy, though. In fact, you can use the calculator to create an order
+    and create the account afterwards. In this case, your order will automatically be submitted once you
+    log in to our website or create a new account.
+  </div>
+  <div class="faq-question">
+    5. Do I need to use an existing email address for my account?
+  </div>
+  <div class="faq-answer">
+    Strictly speaking, it is possible to create an account using an email address which does not exist.
+    However, we strongly recommend using an existing email address! If you provide an address which
+    does not exist, our notification emails will not reach you, which will make it much harder for you
+    to complete your order successfully!
+  </div>
+  <div class="faq-question">
+    6. The calculator says that the world I am transferring from is blocked. What can I do?
+  </div>
+  <div class="faq-answer">
+    Unfortunately, you will have to wait until that world is unlocked for world outgoing trades. If the world which
+    you want to transfer from is blocked, it usually means that we already have too much gold there.
+  </div>
+  <div class="faq-question">
+    7. The calculator says that the world I am transferring to is blocked. What can I do?
+  </div>
+  <div class="faq-answer">
+    Unfortunately, you will have to wait until the world is unlocked for incoming world trades.
+  </div>
+</div>
