--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Administration</h1>
 <ul>
   <li><%= link_to 'Manage Orders', admin_orders_path %></li>
+  <li><%= link_to 'Manage News', admin_news_index_path %></li>
 </ul>
