Change 'Calculator' h2 to 'Calculator & WT' on home page

--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -5,7 +5,7 @@
   <div class="flash-error"><%= flash[:no_referrer] %></div>
 <% end %>
 <div class="container-block has-fancy-inputs">
-  <h2>Calculator</h2>
+  <h2>Calculator & WT</h2>
   <div id="step-indicator">
     <div>Select worlds</div>
     <div class="thin">&#62;</div>
