Display correct Smuggler name in orders#show,index

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -17,8 +17,8 @@
         <%= tibia_com_char_link_for(order.character_from) %>
       </div>
       <div class="name-line smuggler-name">
-        <%= link_to "Gold Smuggler #{order.world_to.name}",
-                    "http://www.tibia.com/community/?subtopic=characters&amp;name=Gold+Smuggler+#{order.world_to.name}".html_safe %>
+        <%= link_to "Gold Smuggler #{order.world_from.name}",
+                    "http://www.tibia.com/community/?subtopic=characters&amp;name=Gold+Smuggler+#{order.world_from.name}".html_safe %>
       </div>
       <div class="name-label-line player-name">Your Tibia character</div>
       <div class="name-label-line smuggler-name">Smuggler's character</div>
