Set low opacity to completed and rejected orders in admin::orders#index

--- a/app/assets/stylesheets/admin/orders.css.scss
+++ b/app/assets/stylesheets/admin/orders.css.scss
@@ -1,6 +1,9 @@
 #admin-orders-table {
   text-align: center;
   font-size: 14px;
+  .shadowed {
+    opacity: 0.2;
+  }
   td {
     padding: 5px 10px;
   }
