--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,64 @@
 <% provide(:title, @user.name) %>
-<%#= render 'layouts/profile_menu' %>
-<div class="big container-block on-the-right">
-  <h2>Profile page</h2>
-  Profile page is still under construction!<br /><br />
+<% if flash[:info] %>
+  <div class="flash-info"><%= flash[:info] %></div>
+<% end %>
+<% if flash[:error] %>
+  <div class="flash-error"><%= flash[:error] %></div>
+<% end %>
+<%= button_to 'Log out', logout_path, class: 'smuggler-button user-button', method: :delete %>
+<%= button_to('Admin panel', admin_path, class: 'smuggler-button user-button', method: :get) if current_user.can_access_admin_panel? %>
+<div class="float-clearer"></div>
+<div class="rounded-square">
+  <h2>Account overview</h2>
+  <table>
+    <tr><td>Username:</td><td class="bold"><%= @user.name %></td></tr>
+    <tr><td>Email:</td><td class="bold"><%= @user.email %></td></tr>
+    <tr><td>Created:</td><td class="bold"><%= time_ago_in_words @user.created_at %> ago</td></tr>
+    <tr><td>Updated:</td><td class="bold"><%= time_ago_in_words @user.updated_at %> ago</td></tr>
+  </table>
 
-  If you want to order a WT, click the "Home Page" link and use our calculator.<br /><br />
+</div>
+<div class="rounded-square">
+  <h2>Your order statistics</h2>
+  <table>
+    <tr><td>Orders in total:</td><td class="bold"><%= @orders.count %></td></tr>
+    <tr><td>Orders in progress:</td><td class="bold"><%= @orders.count { |order| order.order_status_id.between?(1,3) } %></td></tr>
+    <tr><td>Completed orders:</td><td class="bold"><%= @orders.count { |order| order.order_status_id == 4 } %></td></tr>
+    <tr><td>Cancelled orders:</td><td class="bold"><%= @orders.count { |order| order.order_status_id == 5 } %></td></tr>
+    <tr>
+      <td>Highest completed transfer:</td>
+      <% highest_completed_order = @orders.select { |order| order.order_status_id == 4 }.max_by { |order| order.amount_from } %>
+      <td class="bold"><%= highest_completed_order ? number_with_delimiter(highest_completed_order.amount_from, delimiter: ' ') : '0' %> gold</td>
+    </tr>
+    <tr>
+      <td>Total gold transferred:</td>
+      <td class="bold"><%= number_with_delimiter(@orders.select { |order| order.order_status_id == 4 }.inject(0) {|sum, order| sum + order.amount_from }, delimiter: ' ') %> gold</td>
+    </tr>
+  </table>
+</div>
+<div class="rounded-square has-fancy-inputs but-tiny-inputs">
+  <h2>Update your account data</h2>
+  <div class="center-form">
+    <%= form_for(@user) do |f| %>
+      <%= render 'shared/error_messages' %>
 
-  <%= link_to 'Click here', logout_path, method: 'delete' %> if you want to log out.
+      <%= f.label :email %>
+      <%= f.email_field :email %>
+
+      <%= f.label :password %>
+      <%= f.password_field :password %>
+
+      <%= f.label :password_confirmation, 'Confirmation' %>
+      <%= f.password_field :password_confirmation %>
+
+      <%= f.submit 'Update my profile', class: 'smuggler-button' %>
+    <% end %>
+  </div>
+</div>
+<div class="rounded-square lots-of-text">
+  <h2>Advertise Smuggler</h2>
+  <b>This option will be activated in an upcoming update.</b><br /><br />
+  You will be given a special link which you will be able to use to refer new users to our website.
+  You will receive so-called 'smuggler coins' for the first completed world trade of each user you referred to our website,
+  provided their WT was high enough. Smuggler coins will be exchangeable to in-game gold.
 </div>
