--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,11 +4,20 @@
   <title><%= full_title(yield(:title)) %></title>
   <meta charset="utf-8">
   <%= csrf_meta_tags %>
-
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= favicon_link_tag 'favicon.ico', rel: 'icon', type: 'image/x-icon' %>
   <%= javascript_include_tag 'application' %>
   <%= render 'layouts/shim' %>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-43875974-1', 'tibiasmuggler.com');
+    ga('send', 'pageview');
+
+  </script>
 </head>
 <body>
   <%= render 'layouts/header' %>
